--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,43 @@
+:root {
+  --heading-font-family: "Poppins", sans-serif;
+  --defatul-font-family: "Playfair Display", serif;
+}
 body {
   background-color: black;
-  color: white;
+  color: aliceblue;
+  font-family: var(--defatul-font-family);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font-family);
 }
 h1 {
-  font-family: "Poppins", sans-serif;
+  font-size: 80px;
 }
-p {
-  font-family: "Playfair Display", serif;
+.hero {
+  background-color: white;
+  color: black;
+  display: block;
+  padding: 110px 20px;
+  text-align: center;
+}
+.hero h2 {
+  color: #272142;
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 2;
+}
+.btn-branding {
+  background-color: black;
+  border-radius: 4px;
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 12px 20px;
 }
