--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
 :root {
   --heading-font-family: "Poppins", sans-serif;
   --defatul-font-family: "Playfair Display", serif;
+  --primary-color: #391346;
+  --secondary-color: #8e3c9e;
+  --background-color: #ebf4ff;
 }
 body {
   background-color: black;
@@ -16,17 +19,18 @@ h6 {
   font-family: var(--heading-font-family);
 }
 h1 {
+  color: black;
   font-size: 80px;
 }
 .hero {
-  background-color: white;
+  background-color: var(--background-color);
   color: black;
   display: block;
   padding: 110px 20px;
   text-align: center;
 }
 .hero h2 {
-  color: #272142;
+  color: var(--primary-color);
   font-family: "Poppins", sans-serif;
   font-size: 20px;
   font-weight: normal;
@@ -34,10 +38,17 @@ h1 {
 }
 .btn-branding {
   background-color: black;
-  border-radius: 4px;
+  border-radius: 8px;
   color: white;
   font-family: "Courier New", Courier, monospace;
   font-size: 18px;
   line-height: 27px;
   padding: 12px 20px;
+}
+.btn-branding:hover {
+  background-color: var(--secondary-color);
+  color: aliceblue;
+}
+.my-photo {
+  max-width: 20%;
 }
