--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,13 @@
 :root {
   --heading-font-family: "Poppins", sans-serif;
-  --defatul-font-family: "Playfair Display", serif;
+  --default-font-family: "Roboto", sans-serif;
   --primary-color: #391346;
   --secondary-color: #8e3c9e;
-  --background-color: #ebf4ff;
+  --third-color: #ebf4ff;
 }
 body {
-  background-color: black;
-  color: aliceblue;
-  font-family: var(--defatul-font-family);
+  background-color: var(--third-color);
+  font-family: var(--default-font-family);
 }
 h1,
 h2,
@@ -19,18 +18,24 @@ h6 {
   font-family: var(--heading-font-family);
 }
 h1 {
-  color: black;
+  color: var(--third-color);
   font-size: 80px;
 }
+h2 {
+  font-size: 30px;
+}
+p {
+  font-size: 16px;
+  line-height: 1.8;
+}
 .hero {
-  background-color: var(--background-color);
-  color: black;
+  background-color: black;
   display: block;
   padding: 110px 20px;
   text-align: center;
 }
 .hero h2 {
-  color: var(--primary-color);
+  color: var(--third-color);
   font-family: "Poppins", sans-serif;
   font-size: 20px;
   font-weight: normal;
@@ -38,10 +43,20 @@ h1 {
 }
 .btn-branding {
   background-color: black;
+  border: 1px solid var(--third-color);
   border-radius: 8px;
-  color: white;
+  color: var(--third-color);
   font-family: "Courier New", Courier, monospace;
   font-size: 18px;
+  line-height: 27px;
+  padding: 12px 20px;
+}
+.btn-branding-outline {
+  background-color: var(--secondary-color);
+  border: 1px solid var(--third-color);
+  border-radius: 8px;
+  color: var(--third-color);
+  font-size: 16px;
   line-height: 27px;
   padding: 12px 20px;
 }
@@ -49,6 +64,25 @@ h1 {
   background-color: var(--secondary-color);
   color: aliceblue;
 }
+.btn-branding-outline:hover {
+  background-color: var(--primary-color);
+  color: var(--third-color);
+}
 .my-photo {
   max-width: 20%;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 40px;
+  }
+  .hero {
+    background-color: black;
+    display: block;
+    padding: 55px 10px;
+    text-align: center;
+  }
+  .project-description {
+    text-align: center;
+  }
 }
