--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,6 @@
   --default-font-family: "Roboto", sans-serif;
   --primary-color: #391346;
   --secondary-color: #8e3c9e;
-  --third-color: white;
 }
 body {
   background-color: var(--third-color);
@@ -18,7 +17,6 @@ h6 {
   font-family: var(--heading-font-family);
 }
 h1 {
-  color: var(--third-color);
   font-size: 80px;
 }
 h2 {
@@ -28,8 +26,15 @@ p {
   font-size: 16px;
   line-height: 1.8;
 }
+ul {
+  list-style: none;
+}
+li {
+  font-size: 25px;
+  margin: 20px;
+}
 .hero {
-  background-color: black;
+  background-color: rgb(235, 234, 234);
   display: block;
   padding: 110px 60px;
   text-align: center;
@@ -41,8 +46,9 @@ p {
   font-weight: normal;
   line-height: 2;
 }
+
 .btn-branding {
-  background-color: black;
+  background-color: var(--secondary-color);
   border: 1px solid var(--third-color);
   border-radius: 8px;
   color: var(--third-color);
