--- a/styles/style.css
+++ b/styles/style.css
@@ -35,10 +35,18 @@ li {
   font-size: 25px;
   margin: 20px 20px 0 20px;
 }
+a {
+  color: black;
+  text-decoration: none;
+  transition: all ease-in-out 200ms;
+}
+a:hover {
+  color: var(--primary-color);
+}
 .hero {
   background-color: var(--background-color);
   display: block;
-  padding: 80px 60px;
+  padding: 130px 60px;
   text-align: center;
 }
 .hero h2 {
@@ -53,10 +61,11 @@ li {
   background-color: var(--secondary-color);
   border: 1px solid var(--third-color);
   border-radius: 8px;
-  color: var(--third-color);
+  color: white;
   font-size: 16px;
   line-height: 27px;
   padding: 12px 20px;
+  transition: all ease-in-out 200ms;
 }
 
 .btn-branding:hover {
@@ -64,9 +73,20 @@ li {
   color: white;
 }
 
-.about-me {
-  background-color: var(--background-color);
+.contact-me {
+  background-color: #ececec;
   padding: 50px;
+  transition: all ease-in-out 200ms;
+}
+.contact-button {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 12px 30px;
+  transition: all ease-in-out 200ms;
+}
+.contact-button:hover {
+  background-color: white;
+  color: var(--secondary-color);
 }
 
 .my-photo {
@@ -79,10 +99,16 @@ li {
   }
   .hero {
     display: block;
-    padding: 55px 10px;
+    padding: 80px 10px;
     text-align: center;
   }
   .project-description {
     text-align: center;
+  }
+  .contact-me {
+    flex-direction: column;
+  }
+  .contact-button {
+    margin-top: 20px;
   }
 }
