--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
   --primary-color: #9fd3c7;
   --secondary-color: #a2a8d3;
   --background-color: rgb(235, 234, 234);
+  --container-background-color: #eaf6f6;
 }
 body {
   background-color: var(--third-color);
@@ -130,6 +131,31 @@ a:hover {
   background-color: var(--primary-color);
 }
 
+.work-hero {
+  background-color: var(--background-color);
+  padding: 80px 60px;
+}
+.work-hero h1 {
+  font-size: 26px;
+  font-weight: 900;
+}
+.work-hero h2 {
+  font-size: 20px;
+}
+.project-container {
+  background-color: var(--container-background-color);
+  border-radius: 18px;
+  padding: 30px 60px;
+  margin: 50px;
+}
+.project-image {
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+.project-link a:hover {
+  color: var(--secondary-color);
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 60px;
@@ -168,5 +194,9 @@ a:hover {
   }
   li {
     margin: 15px 15px 0 15px;
+  }
+  .project-link {
+    flex-direction: column;
+    align-items: center;
   }
 }
