Added content to the contact page

--- a/styles/style.css
+++ b/styles/style.css
@@ -155,6 +155,10 @@ a:hover {
 .project-link a:hover {
   color: var(--secondary-color);
 }
+.contact-container {
+  background-color: var(--background-color);
+  padding: 150px 30px;
+}
 
 @media (max-width: 768px) {
   h1 {
@@ -163,9 +167,6 @@ a:hover {
   .hero {
     display: block;
     padding: 80px 10px;
-    text-align: center;
-  }
-  .project-description {
     text-align: center;
   }
   .contact-me {
