--- a/styles/style.css
+++ b/styles/style.css
@@ -157,7 +157,25 @@ a:hover {
 }
 .contact-container {
   background-color: var(--background-color);
-  padding: 150px 30px;
+  padding: 90px 30px;
+}
+
+.contact-container h1 {
+  font-size: 30px;
+  font-weight: 600;
+}
+.contact-container h2 {
+  font-size: 25px;
+}
+.contact-container {
+  font-size: 18px;
+}
+.contact-logo {
+  background-color: var(--secondary-color);
+  color: white;
+  padding: 10px 10px;
+  font-size: 28px;
+  border-radius: 50%;
 }
 
 @media (max-width: 768px) {
@@ -203,5 +221,10 @@ a:hover {
   .project-container {
     margin: 30px;
     padding: 30px 10px;
+  }
+
+  .contact-info {
+    flex-direction: column;
+    align-items: start;
   }
 }
